--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -31,7 +31,7 @@
     "!which chromedriver\n",
     "\n",
     "executable_path = {'executable_path':'/usr/local/bin/chromedriver'}\n",
-    "browser = Browser('chrome', **executable_path, headless=False)"
+    "return browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
   {
